--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,13 @@ repositories {
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-}
-
-test {
-    useJUnitPlatform()
+    testImplementation(
+            "com.codeborne:selenide:7.0.0",
+            "com.github.javafaker:javafaker:1.0.2",
+            "org.junit.jupiter:junit-jupiter:5.9.3",
+            "org.slf4j:slf4j-simple:2.0.7"
+    )
+    test {
+        useJUnitPlatform()
+    }
 }
